--- a/gallary/app/src/main/res/layout/activity_main.xml
+++ b/gallary/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,9 @@
         android:text="ㅇㅇㅇㅇㅇ"
         android:textSize="20px"/>
 
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </LinearLayout>
